--- a/apps/web/css/globals.css
+++ b/apps/web/css/globals.css
@@ -135,6 +135,7 @@ p.mn {
 .contact-cta .contact-text-small {
   position: relative;
   z-index: 1;
+  margin-left: 0.15em;
 }
 
 .contact-cta .contact-text-large {
@@ -144,6 +145,9 @@ p.mn {
 
 .contact-cta .contact-text-large h1 {
   font-size: 7rem;
+  font-style: normal;
+  margin-left: 0.15em;
+  line-height: 1.1;
 }
 
 @keyframes gradientMove {
@@ -194,6 +198,8 @@ p.mn {
 
   .contact-cta .contact-text-large h1 {
     font-size: 3rem;
+    font-style: normal;
+    margin-left: 0.05em;
   }
 }
 
